# mighty_mite

./: package-lock.json  pyproject.toml  readme.md  utils.sh
management-portal/: .gitignore  index.html  mock-api-data.json  package-lock.json  package.json  postcss.config.cjs  vite.config.ts  vitest.config.ts
management-portal/.storybook/: main.ts  preview.ts
management-portal/src/: App.svelte  App.test.ts  app.css  main.ts
management-portal/src/lib/: Counter.test.ts  Network.stories.svelte  Network.svelte  WifiForm.svelte  WifiForm.test.ts
management-portal/src/routes/: +layout.svelte
src/: boot.py  hcsr.py  main.py  servo.py
src/lib/sensor/: ultrasonic_hcsr04.py
src/lib/servo/: mg995.py
src/lib/stepper/: uln2003.py
src/lib/web/: nanoweb.py
