[tool.poetry]
name = "mighty-mite"
version = "0.1.0"
description = "fun with microprocessors"
authors = ["Mark Koelle <mkoelle@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.10"
microwebsrv2 = {git = "https://github.com/jczic/MicroWebSrv2.git"}
ampy = "^0.1.2"

[tool.poetry.group.dev.dependencies]
esptool = "^4.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
