[tool.poetry]
name = "mighty-mite"
version = "0.1.0"
description = "fun with microprocessors"
authors = ["Mark Koelle <mkoelle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
microwebsrv2 = {git = "https://github.com/jczic/MicroWebSrv2.git"}

[tool.poetry.group.dev.dependencies]
esptool = "^4.6.2"
ampy = "^0.1.2"
adafruit-ampy = "^1.1.0"
mpremote = "^1.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
