[tool.poetry]
name = "mighty-mite"
version = "0.1.0"
description = "fun with microprocessors"
authors = ["Mark Koelle <mkoelle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
machine = "^0.0.1"

[tool.poetry.group.dev.dependencies]
esptool = "^4.6.2"
adafruit-ampy = "^1.1.0"
mpremote = "^1.20.0"
poethepoet = "^0.22.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test          = "pytest"
_lint_mypy    = "poetry run mypy src"
_lint_flake8  = "poetry run flake8"
_lint_black   = "poetry run black src"
lint          = [ "_lint_black","_lint_flake8"]